# android-database-sqlcipher

./: .classpath  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  AndroidManifest.xml  BUILD  ICU_LICENSE  Makefile  README  README.md  README.org  SQLCIPHER_LICENSE  build-openssl-libraries.sh  build.gradle  build.xml  compare-to-official-release  custom_rules.xml  default.properties  gradle.properties  local.properties  openssl_android_64_bit_support.patch  pom.xml  proguard-project.txt  proguard-rules.pro  project.properties  settings.gradle  sqlcipher.pom
app/: Android.mk  Android.mk.bak  Application.mk  Application32.mk  Application64.mk  CMakeLists.txt  bintray.gradle  build.gradle  proguard-rules.pro
app/jni/: sqlite3_exception.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CursorWindow.cpp  CursorWindow.h  jni_elements.h  jni_exception.h  log.h  net_sqlcipher_CursorWindow.cpp  net_sqlcipher_database_SQLiteCompiledSql.cpp  net_sqlcipher_database_SQLiteDatabase.cpp  net_sqlcipher_database_SQLiteProgram.cpp  net_sqlcipher_database_SQLiteQuery.cpp
app/src/main/java/com/j256/ormlite/core/: LICENSE.txt  (+1 more)
app/src/main/java/net/sqlcipher/: AbstractWindowedCursor.java  BulkCursorNative.java  Cursor.java  CursorWindow.java  DatabaseErrorHandler.java  DatabaseUtils.java  IBulkCursor.java  IContentObserver.aidl  MatrixCursor.java  SQLException.java  StaleDataException.java  package-info.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
(+399 files in other folders)
